M1-253: Messaging-adapter consistency: virtual-thread dispatch parity
Move the SignalAdapter reconnect thread and the two single-thread inbound
dispatch executors (SignalJsonRpcClient, SimpleXWebSocketClient) from platform
threads to virtual threads, matching the SimpleXAdapter sibling and the
project's virtual-thread policy for blocking handler callbacks. Pure
consistency swap (concurrency=1, FIFO held by the executor) with no behavioral
delta; the .daemon() affordance drops out since virtual threads are always
daemon. The signal-jsonrpc-reader thread stays platform (out of scope). The
original synchronized-pinning rationale is moot on the JDK 25 target (JEP 491,
final in JDK 24, removed synchronized pinning of virtual threads).

Alternatives considered:
  - T23 (SimpleXSubprocess java.util.Random -> ThreadLocalRandom): rejected on
    premise-fail refine. The injected Random is a deliberate test-determinism
    seam (deterministic jitter assertions; new Random(0L) construction in two
    out-of-scope test classes); ThreadLocalRandom cannot be seeded, so the swap
    would break those tests or weaken assertions. Sibling divergence accepted.

Reviewed-by: code-reviewer (VERDICT: APPROVE; round 1; agent run: afd749bcca1703a06)